--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,7 +50,7 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: 1200px;
     margin-top:0px;
     padding-top:10px;
     background-color: #55acee;
@@ -190,7 +190,7 @@ nav:nth-child(1) {
 }
 
 #domos {
-    width: 40%;
+    width: 65%;
     min-width: 400px;
     border: 2px solid #55acee;
     border-radius: 4px;
@@ -251,6 +251,21 @@ h3.domoAge {
     font-weight: bold;
     padding-right: 40px;
     font-size: 1.5em;
+}
+
+h3.domoNickname {
+    float:right;
+    text-align: left;
+    width: 100px;
+    margin-right: 75px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: 1.5em;
+}
+
+#domoNickname{
+    margin-right: 15px;
+    margin-left: 50px;
 }
 
 .domo:first-child {
